# GuideRobotDog

./: Hotdog.py  error.txt
Docs/: README.md
DynamixelSDK-3.7.31/python/: setup.py
GRD_URDF/: CMakeLists.txt  package.xml
GRD_URDF/meshes/: FL4_link.STL  FR3_link.STL  RL12_link.STL  RR7_link.STL  RR9_link.STL  base_footprint_link.STL
GRD_URDF_v1/config/: joint_names_GRD_v8_simple.SLDASM.yaml
GRD_URDF_v1/launch/: display.launch  gazebo.launch
GRD_URDF_v1/meshes/: FL5_link.STL  FL6_link.STL  FR1_link.STL  FR2_link.STL  RL10_link.STL  RL11_link.STL  RR8_link.STL  base_link.STL
GRD_URDF_v1/urdf/: GRD_v8_simple.SLDASM.csv  GRD_v8_simple.SLDASM.urdf
GRD_URDF_v2/: CMakeLists.txt  package.xml
GRD_URDF_v2/launch/: display.launch  gazebo.launch
GRD_URDF_v2/meshes/: FL4_link.STL  FL5_link.STL  FL6_link.STL  FLC.STL  FR1_link.STL  FR2_link.STL  FR3_link.STL  FRC.STL  RL10_link.STL  RL11_link.STL  RL12_link.STL  RLC.STL  RR7_link.STL  RR8_link.STL  RR9_link.STL  RRC.STL  base_footprint_link.STL  base_link.STL
GRD_URDF_v2/urdf/: GRD_v8_simple_0311v2.csv  GRD_v8_simple_0311v2.urdf
guiderobotdog_description/: CMakeLists.txt  package.xml
guiderobotdog_description/config/: joint_names_hotdog_material.yaml
guiderobotdog_description/launch/: display.launch  gazebo.launch
guiderobotdog_description/meshes/: FR1_link.STL  FR2_link.STL  RL10_link.STL  RR9_link.STL  back_left_foot.STL  base_link.STL  front_left_foot.STL
guiderobotdog_description/urdf/: hotdog.csv  hotdog.urdf
spot_best/models/: spot_ars_299_policy  spot_ars_599_policy  (+5 more)
spotmicro/: spot.py
(+1086 files in other folders)
